<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lanjewartutorial.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">


    </fragment>
    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.lanjewartutorial.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.lanjewartutorial.ui.aboutus.AboutusFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus"/>


    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.lanjewartutorial.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
    android:id="@+id/nav_login"
    android:name="com.example.lanjewartutorial.ui.login.LoginFragment"
    android:label="@string/menu_login"
    tools:layout="@layout/fragment_login" />
</navigation>